<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.damian.pregoadminapp.updateOrder"
    tools:showIn="@layout/activity_update_order">

    <TextView
        android:id="@+id/textView10"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="4dp"
        android:text="@string/order_status"
        app:layout_constraintEnd_toStartOf="@+id/orderUpdateStatus"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/orderUpdateStatus"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="11dp"
        android:layout_marginTop="4dp"
        android:text="@string/textview"
        app:layout_constraintEnd_toStartOf="@+id/updateStatusOrderButton"
        app:layout_constraintStart_toEndOf="@+id/textView10"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/updateStatusOrderButton"
        android:layout_width="0dp"
        android:layout_height="31dp"
        android:layout_marginEnd="70dp"
        android:onClick="statusUpdater"
        android:text="@string/update_status"
        android:textSize="8sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/orderUpdateStatus"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/deleteUpdateOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginStart="41dp"
        android:onClick="deleteOrder"
        android:text="@string/delete"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Button
        android:id="@+id/updateUpdateOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="73dp"
        android:onClick="updateOrder"
        android:text="@string/update"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <TextView
        android:id="@+id/updateTimeReceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:layout_marginLeft="64dp"
        android:text="@string/timereceived"
        app:layout_constraintBottom_toTopOf="@+id/updateOrderListView"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/updateDateReceived"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="12dp"
        android:layout_marginLeft="64dp"
        android:text="@string/datereceived"
        app:layout_constraintBottom_toTopOf="@+id/updateTimeReceived"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView18"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:text="@string/date"
        app:layout_constraintBaseline_toBaselineOf="@+id/updateDateReceived"
        app:layout_constraintLeft_toLeftOf="parent" />

    <TextView
        android:id="@+id/textView19"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="16dp"
        android:layout_marginTop="94dp"
        android:text="@string/time"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ListView
        android:id="@+id/updateOrderListView"
        android:layout_width="368dp"
        android:layout_height="0dp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintBottom_toTopOf="@+id/deleteUpdateOrder"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView19" />

    <TextView
        android:id="@+id/textView6"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="17dp"
        android:layout_marginTop="33dp"
        android:text="@string/total"
        app:layout_constraintEnd_toStartOf="@+id/totalPriceUpdateOrder"
        app:layout_constraintTop_toBottomOf="@+id/updateStatusOrderButton" />

    <TextView
        android:id="@+id/totalPriceUpdateOrder"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="58dp"
        android:text="TextView"
        app:layout_constraintBaseline_toBaselineOf="@+id/textView6"
        app:layout_constraintEnd_toEndOf="parent" />
</android.support.constraint.ConstraintLayout>
